@@ -1,4 +1,6 @@
 <?php
+# Needed to supress complains in the server's log files
+date_default_timezone_set('America/Los_Angeles') ;
 
 require_once 'authdb/authdb.inc.php' ;
 require_once 'regdb/regdb.inc.php' ;
