@@ -4,6 +4,17 @@
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group/>
         <group name="PCDS Web App"/>
-        <group name="PCDS Web Apps"/>
+        <group name="PCDS Web Apps">
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/index.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/experiment_time.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/experiment_time_populate.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/irods_cache_populate.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/irods.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/experiment_runs.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/statistics.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/Requests2pdf.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/select_experiment.php</file>
+            <file>file:/N:/lcls/releases/pswww-apps-dev/DataPortal/web/html/statistics_irods_performance.php</file>
+        </group>
     </open-files>
 </project-private>
